<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="30"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/selectFont"
            android:textAlignment="textStart"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

        <RadioGroup
            android:id="@+id/fontRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/defFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setupTextSizeSample"
                android:textSize="36sp" />


            <RadioButton
                android:id="@+id/bktFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setupTextSizeSample"
                android:textSize="36sp" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/timeRegion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookContent"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <SeekBar
            android:id="@+id/theorySizeBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0"
        android:gravity="center|center_vertical" >

        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitleFontSize"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <SeekBar
            android:id="@+id/subtitleSizeBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>