<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@+id/lamrimLabel"
        android:layout_toStartOf="@+id/lamrimLabel"
        android:gravity="center"
        android:text="@string/msgSearch"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/searchInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_toLeftOf="@+id/searchLastBtn"
        android:ems="10"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <ImageButton
        android:id="@+id/searchLastBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/searchInput"
        android:layout_toLeftOf="@+id/searchNextBtn"
        android:background="#00000000"
        android:src="@drawable/search_last_icon" />

    <ImageButton
        android:id="@+id/searchNextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="5dp"
        android:background="#00000000"
        android:src="@drawable/search_next_icon" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/searchInput"
        android:choiceMode="singleChoice"
        android:visibility="gone" />

    <TextView
        android:id="@+id/subtitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/seekBar"
        android:layout_toRightOf="@+id/seekBar"
        android:enabled="false"
        android:text="@string/subtitleFontSize"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/lamrimLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/seekBar"
        android:layout_toLeftOf="@+id/seekBar"
        android:layout_toStartOf="@+id/seekBar"
        android:text="@string/setupTextSizeSample"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:indeterminate="false"
        android:max="1"
        android:minWidth="40dp"
        android:progress="0" />

    <CheckBox
        android:id="@+id/searchFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/searchFromNet" />

</RelativeLayout>
